kafka-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kafka-client
  namespace: default
spec:
  containers:
  - name: kafka-client
    image: confluentinc/cp-kafka:latest
    command:
    - /bin/sh
    - -c
    - "tail -f /dev/null"
  restartPolicy: Never
