my-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app

  # for service connection
  labels:
    app: my-app
spec:
  containers:
  - name: my-app
    image: registry.digitalocean.com/lehel-registry/my-app:20231110

    imagePullPolicy: Always
    ports:
      - name: lb-my-app-port
        containerPort: 3000
        protocol: TCP 
    
  imagePullSecrets:
    - name: my-docker-secret
