mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  labels:
    name: mongo-service
    env: test
    owner: lehel
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    name: mongodb
    env: test
    owner: lehel
